--- a/backend/package.json
+++ b/backend/package.json
@@ -11,12 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "express-fileupload": "^1.4.0",
     "mongoose": "^7.1.1",
-    "multer": "^1.4.5-lts.1"
+    "node-cron": "^3.0.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
